--- a/juste prix/justeprix.css
+++ b/juste prix/justeprix.css
@@ -3,7 +3,6 @@ body {
     margin: auto;
 }
 .bandeau {
-    margin-top: 20px;
     width: 100%;
     max-height: 30vh;
 }
@@ -23,4 +22,36 @@ body {
     border-radius: 5px;
     font-size: 20px;
     cursor: pointer;
+}
+.reboursDiv {
+    transition: 0.2s;
+    font-size: 15px;
+}
+.reboursDiv.cool {
+    color: green;
+}
+.reboursDiv.warning {
+    color: coral;
+}
+.reboursDiv.danger {
+    color: red;
+    animation: suspens 1s infinite;
+}
+@keyframes suspens {
+    0%, 100% {
+        transform: rotate(0deg);
+        font-size: 15px;
+    }
+    25% {
+        transform: rotate(-45deg);
+        font-size: 18px;
+    }
+    50% {
+        transform: rotate(0deg);
+        font-size: 18px;
+    }
+    75% {
+        transform: rotate(45deg);
+        font-size: 18px;
+    }
 }
